zeit.content.gallery changes
============================

1.22.5 (unreleased)
-------------------

- Bilder können als 'versteckt' markiert werden (#4280).

1.22.4 (2009-06-23)
-------------------

- Beim »Bilderordner synchronisieren« werden nur noch die Bilder im
  Thumbnail-Ordner gelöscht und nicht mehr der gesamte Thumbnail-Ordner.

1.22.3 (2009-06-17)
-------------------

- Veraltete Resource-Library zeit.content.Sortable nicht mehr verwenden.

1.22.2 (2009-06-08)
-------------------

- Text aus Captions wurde bei der Verarbeitung nicht immer richtig XML-escaped.
  Eine Galerie konnte hierduch teilweise unbearbeitbar werden.

1.22.1 (2009-06-05)
-------------------

- Registrierung via TypeDeclaration

1.22 (2009-05-28)
-----------------

- Aus zeit.cms extrahiert.