@@ -5,6 +5,8 @@ zeit.content.gallery changes
 -------------------
 
 - Bilder können als 'versteckt' markiert werden (#4280).
+- Hilfsfunktionen für Browser-Tests nach zeit.content.gallery.browser.testing
+  extrahiert.
 
 1.22.4 (2009-06-23)
 -------------------
